--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "angular-crumbs": "^3.0.1",
     "bootstrap": "^4.6.0",
     "emailjs-com": "^2.6.4",
-    "imagesloaded": "^4.1.4", 
+    "font-awesome": "^4.7.0",
+    "imagesloaded": "^4.1.4",
     "jquery": "^3.5.1",
     "masonry-layout": "^4.2.2",
     "ng-circle-progress": "^1.6.0",
